git-svn-id: https://server3.subversion-server.com/phpmanufaktur/svn/kitForm/trunk@6 512e69e5-c9ed-6342-ab9a-91c975571e94

--- a/frontend.css
+++ b/frontend.css
@@ -17,6 +17,23 @@
  padding: 10px;
  font-size: 8pt;
 }
+.intro {
+  border: 1px solid #000000;
+  color: #000000;
+  background-color: #ffffdd;
+  margin: 20px 0 10px 0;
+  padding: 10px;
+  font-size: 8pt;
+}
+.message
+{
+  border: 1px solid #0000CC;
+  color: #000;
+  background-color: #FFFFCC;
+  margin: 20px 0 10px 0;
+  padding: 10px;
+  font-size: 8pt;
+}
 
 td {
   font-size: 8pt;
