--- a/backend.css
+++ b/backend.css
@@ -1,9 +1,9 @@
 /**
  * kitForm
  * 
- * @author Ralf Hertsch (ralf.hertsch@phpmanufaktur.de)
+ * @author Ralf Hertsch <ralf.hertsch@phpmanufaktur.de>
  * @link http://phpmanufaktur.de
- * @copyright 2011
+ * @copyright 2011-2012 - phpManufaktur by Ralf Hertsch
  * @license GNU GPL (http://www.gnu.org/licenses/gpl.html)
  * @version $Id$
  * 
@@ -259,6 +259,12 @@ td.sub_value_free_field {
 }
 .sub_value_free_field input {
   font-size: 7pt;
+}
+.sub_move_up,
+.sub_move_down {
+  display: inline-block;
+  margin: 0;
+  padding: 2px 0;
 }
 #sorter {
   color: #003366;
